Rettet til engelsk, optimeret kode

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h1>KEAmon GO</h1>
     <div id="map"></div>
 
-    <template id="infoboks">
-        <div class=tekst_om_kea>
+    <template id="infobox">
+        <div class=kobenhavnertur>
 
-            <h3 class="data_navn">OVERSKRIFT</h3>
-            <img class="data_billede" src="..">
+            <h3 class="data_name">headline</h3>
+            <img class="data_img" src="..">
 
-            <p class="data_beskrivelse">beskrivelse</p>
+            <p class="data_about">about</p>
 
         </div>
     </template>
