--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
 </head>
 
 <body>
-    <h1>KEAmon GO</h1>
+    <h1>Københavnerture</h1>
     <div id="map"></div>
 
     <template id="infobox">
         <div class=kobenhavnertur>
-
             <h3 class="data_name">headline</h3>
-            <img class="data_img" src="..">
-
             <p class="data_about">about</p>
-
         </div>
     </template>
 
