spørgsmål i json og html er sat ind

--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
     <div id="map"></div>
 
     <template id="infobox">
-        <div class=kobenhavnertur>
+        <div class=window>
             <h3 class="data_name">headline</h3>
             <p class="data_about">about</p>
+        </div>
+    </template>
+
+    <div class="score_button"></div>
+    <div class="question_button"></div>
+    <template id="question_window">
+        <div class=window>
+            <h2 class="data_qtitle">spørgsmål x</h2>
+            <h3 class="data_question">godt spørgsmål</h3>
+            <p class="data_a1">svar 01</p>
+            <p class="data_a2">svar 02</p>
+            <p class="data_a3">svar 03</p>
+            <p class="data_a4">svar 04</p>
         </div>
     </template>
 
