--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div class="score_button"></div>
     <div class="question_button"></div>
+
     <template id="question_window">
         <div class=window>
             <h2 class="data_qtitle">spørgsmål x</h2>
@@ -32,6 +33,33 @@
             <p class="data_a4">svar 04</p>
         </div>
     </template>
+
+    <template id="score_window">
+        <div class="window_score">
+            <div class="tab">
+                <h2>GRUPPER</h2>
+                <h2>FIRMAER</h2></div>
+            <div class="table_name">
+                <h3>NAVN</h3>
+                <h3>POINT</h3></div>
+            <div class="groups">
+                <p class="data_gruppe01">gruppe 01</p>
+                <p class="data_gruppe02">gruppe 02</p>
+                <p class="data_gruppe03">gruppe 03</p>
+                <p class="data_gruppe04">gruppe 04</p>
+                <p class="data_gruppe05">gruppe 05</p>
+            </div>
+            <div class="points">
+                <p class="data_points01">1000</p>
+                <p class="data_points01">750</p>
+                <p class="data_points01">500</p>
+                <p class="data_points01">250</p>
+                <p class="data_points01">0</p>
+            </div>
+        </div>
+    </template>
+
+    <div class="scoreboard"></div>
 
 
     <!-- JQUERY + JS -->
