--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         </div>
     </template>
 
+    <div class="question_answer_window">
+        <h2>Tak for dit svar</h2>
+        <p>Du kan tale med guiden, hvis du vil vide det korrekte svar</p>
+    </div>
+
     <template id="score_window">
         <div class="window_score">
             <div class="tab">
