HVAD VIRKER: rutevejledning til næste marker, markers med skiftende farve, spørgsmål og score button, spørgsmål kommer op når du går fra posten, gamle gps markers bliver slettet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <h1>Københavnerture</h1>
     <div id="map"></div>
 
     <template id="infobox">
@@ -76,7 +75,7 @@
     <script src="function.js"></script>
 
     <!-- GOOGLE MAPS -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnFl9bQAehgWyNosRebn9WVE5KNwryAns&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnFl9bQAehgWyNosRebn9WVE5KNwryAns&callback=initMap&libraries=geometry"></script>
 
 
 
