alle funktioner virker. Mangler style på question + score, svg kort, gps marker

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 
 <body>
 
+    <!-- INTRO TIL BYVANDRING -->
+    <div class="loadingscreen">
+        <div class="logo"></div>
+        <div class="bg"></div>
+    </div>
+    <div class="creategroup">
+        <h2>INDTAST GRUPPE</h2>
+        <input type="text" name="gamepin" value="GAMEPIN">
+        <br>
+        <input type="text" name="groupname" value="NAVN">
+        <br>
+        <input type="text" name="company" value="FIRMA">
+        <br>
+        <h3 id="done"> FÆRDIG </h3>
+    </div>
+
     <!-- GPS MARKER TEST -->
     <div class="gps">
         <div class="white"></div>
